Fix project item image overflow.

--- a/components/ProjectItem/projectItem.module.scss
+++ b/components/ProjectItem/projectItem.module.scss
@@ -63,6 +63,7 @@ $border-radius: 12px;
 	width: 100%;
 	height: auto;
 	flex: 1;
+	overflow: auto;
 }
 
 .desktopImage {
